@startuml

title __SAMPLE's Class Diagram__\n

  package sample {
    class DBConnection {
        - statement : Statement
        - connection : Connection
        - resultSet : ResultSet
        - url : String
        - username : String
        - password : String
        + DBConnection()
        + getEmail()
        + buyRed()
        + buyBlau()
    }
  }
  

  package sample {
    class Login {
        ~ emailField : TextField
        ~ passField : TextField
        ~ email : String
        ~ pass : String
        + initialize()
        + logInClick()
    }
  }
  

  package sample {
    class Main {
        + start()
        {static} + main()
    }
  }
  

  package sample {
    class MainScreen {
        ~ img1 : ImageView
        ~ img2 : ImageView
        ~ buy1 : TextField
        ~ buy2 : TextField
        + initialize()
        + logOutClick()
        + buy1()
        + buy2()
    }
  }
  

  Login -up-|> Initializable
  Login o-- DBConnection : dbc
  Main -up-|> Application
  MainScreen -up-|> Initializable
  MainScreen o-- DBConnection : dbc


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
